--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
   ],
   "rules": {
     "@typescript-eslint/no-unused-vars": [
-      "error",
+      "warn",
       {
         "args": "all",
         "argsIgnorePattern": "^_",
