--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "bun run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "echo 'cardrelay.emmaline-autumn.dev' > ./build/CNAME && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
